finish crystal game

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
     <h1>CrystalCollector!</h1>
+    </div>
     <div id="instruction">
-        <p>You will me given a random number at the start of the game.</p>
+        <p>You will be given a random number at the start of the game.</p>
         <br>
         <p>There are four crystals below. By clicking on a crystal you will add a specific ammount of points to your total score.</p>
         <br>        
@@ -28,19 +29,18 @@
             </td>
             <td>
                 <div class="block">
-                <output id="wins">Wins:</output>
+                <output id="wins">Wins: 0</output>
                 <br><br><br>
-                <output id="looses">Looses:</output>
+                <output id="looses">Looses: 0</output>
                 </div>
             </td>
         </tr>
     </table>
     <div class="crystalImages">
-        <img id="pic1" src="assets/images/2.png">
-        <img id="pic2" src="assets/images/1.png">
-        <img id="pic3" src="assets/images/3.png">
-        <img id="pic4" src="assets/images/4.png">
-        
+        <img id="pic1" class="image" src="assets/images/1.png">
+        <img id="pic2" class="image" src="assets/images/2.png">
+        <img id="pic3" class="image" src="assets/images/3.png">
+        <img id="pic4" class="image" src="assets/images/4.png">
     </div>
     <div class="output2">
         <h3>Your total score is: </h3>
