--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <br>
         <p>There are four crystals below. By clicking on a crystal you will add a specific ammount of points to your total score.</p>
         <br>        
-        <p>You win the game by matching you total score to random number, you loose the game if your total score goes above the random number.</p>
+        <p>You win the game by matching your total score to random number, you loose the game if your total score goes above the random number.</p>
         <br>        
         <p>The value of each crystal is hiden from you until you click on it.</p>
         <br>        
-        <p>Each time when the game starts, the game will change the values of each crystal.</p>
+        <p>Each time the game starts, the game will change the values of each crystal.</p>
     </div>
     <table>
         <tr>
